removed spacer, moved into space